# EGL

./: CMakeLists.txt
CMakeModules/: FindFBX.cmake
examples/BasicCube/assets/: fragmentShader.glsl  vertexShader.glsl
examples/BasicCube/include/: Cube.hpp  Game.hpp  Node.hpp
examples/BasicCube/src/: Cube.cpp  Game.cpp  Node.cpp  Scene.cpp  main.cpp
examples/BasicModel/assets/: fragmentShader.glsl  vertexShader.glsl
examples/BasicModel/include/: Model.hpp  Node.hpp  Scene.hpp
examples/BasicModel/src/: Game.cpp  Model.cpp  Node.cpp
examples/assets/: fragmentShader.glsl  vertexShader.glsl
examples/test/src/: main.cpp
include/EGL/: Buffer.hpp  Clock.hpp  FBXModel.hpp  Game.hpp  InputManager.hpp  Mesh.hpp  Model.hpp  RenderContext.hpp  SFMLContext.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp
includes/: Shader.hpp
sources/: Shader.cpp
src/EGL/: Buffer.cpp  Clock.cpp  FBXModel.cpp  InputManager.cpp  Mesh.cpp  Model.cpp  SFMLContext.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp
